app/assets/stylesheets/layouts/_tiles.scss
.l-tiles__inner {
  @include column(12);
  margin-top: baseline-unit(4);

  .homepage & {
    margin-top: 5px;
  }

  @include respond-to($mq-m) {
    margin-top: baseline-unit(9);
  }

  .flexbox & {
    flex-wrap: wrap;
    flex-flow: row wrap;

    @include respond-to($mq-m) {
      display: flex;
    }
  }
}

.l-tiles-title {
  background: $header-bg-color;
  color: $white;
  text-transform: uppercase;
  font-weight: $brand-font-weight;
  text-align: center;
  padding-top: baseline-unit(3);
  padding-bottom: baseline-unit(5);

  @include respond-to($mq-m) {
    padding-top: baseline-unit(7);
    padding-bottom: baseline-unit(9);
  }
}

.l-tiles-title__header {
  @include font-size(36);
  color: $white;
  font-family: $brand-font-stack;
  font-weight: $brand-font-weight;
  padding-bottom: baseline-unit(2);
  margin-bottom: 0;
  text-transform: initial;
}

.l-tile {
  width: 100%;
  margin-bottom: 5px;

  @include respond-to($mq-m) {
    float: left;

    .non-article-page & {
      width: 49.75%;
      margin-right: .5%;

      .flexbox & {
        display: flex;
        flex-basis: 49.75%;
        float: none;
        min-height: 0;
      }

      &:nth-child(2n) {
        margin-right: 0;
      }
    }
  }

  @include respond-to($mq-l) {
    .non-article-page &,
    .article-page & {
      width: 33%;
      margin-right: .5%;

      .flexbox & {
        display: flex;
        flex-basis: 33%;
        float: none;
        min-height: 0;
      }

      &:nth-child(2n) {
        margin-right: .5%;
      }

      &:nth-child(3n) {
        margin-right: 0;
      }
    }
  }
}

.l-tile--archive {
  .non-article-page & {
    float: right;

    @include respond-to($mq-m) {
      margin-right: 0;

      .flexbox & {
        margin-left: auto;
        float: none;
        flex-basis: 49.75%;
      }
    }

    @include respond-to($mq-l) {
      .flexbox & {
        flex-basis: 33%;
      }
    }
  }
}

